WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
131176
REGRESSION (Async text input): Controls become unresponsive to mouse events
https://bugs.webkit.org/show_bug.cgi?id=131176
Summary
REGRESSION (Async text input): Controls become unresponsive to mouse events
Alexey Proskuryakov
Reported
2014-04-03 11:41:57 PDT
Form controls frequently become unresponsive to mouse events, or respond erratically. <
rdar://problem/16507932
>
Attachments
proposed fix
(1.31 KB, patch)
2014-04-03 11:46 PDT
,
Alexey Proskuryakov
thorton
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Alexey Proskuryakov
Comment 1
2014-04-03 11:46:07 PDT
Created
attachment 228525
[details]
proposed fix
Alexey Proskuryakov
Comment 2
2014-04-03 12:02:07 PDT
Committed <
http://trac.webkit.org/r166735
>.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug