REGRESSION (Async text input): Controls become unresponsive to mouse events https://bugs.webkit.org/show_bug.cgi?id=131176 <rdar://problem/16507932>

Reviewed by Tim Horton.

* UIProcess/API/mac/WKView.mm: (NATIVE_MOUSE_EVENT_HANDLER):
Don't confuse event handling machinery by sending events to WebProcess twice.



Canonical link: https://commits.webkit.org/149234@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@166735 268f45cc-cd09-0410-ab3c-d52691b4dbfc